# spotify-freemium

./: .gitignore  Cargo.toml  Info.plist  LICENSE.md  README.md
resources/osascripts/: GetSongName.scpt  IsOpen.scpt
scripts/: debug.sh  release.sh
src/: config.rs  freemium.rs  main.rs  spotify.rs
src/osascripts/: GetSongURL.scpt  GetVolume.scpt  Quit.scpt  SetVolume.scpt
